--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
       <li>Tea</li>
       <li>Milk</li>
       <li>Chocolate</li>
+      <li>Tea</li>
       <li>add more...</li>
     </ul>
   </body>
